# PSINT-modpack-assembler

./: .gitignore  README.md  meson.build  meson.options
.github/workflows/: release.yml
examples/fabric_modpack/: build.wren
examples/forge_modpack/: build.wren
modules/: please-speed.wren
src/: log.hpp  main.cpp  manifest.cpp  manifest.hpp  packer.cpp  packer.hpp  resolver.cpp  resolver.hpp  server_export.cpp  server_export.hpp  wren_bindings.cpp  wren_bindings.hpp  wren_modules.hpp
subprojects/: doctest.wrap  libzip.wrap  wren.wrap  yyjson.wrap
subprojects/packagefiles/wren/: meson.build
subprojects/packagefiles/yyjson/: meson.build
tests/: meson.build  test_main.cpp  test_modpack_server_export.cpp  test_packer.cpp
